  * brought a few changes to the services for managing broken imports
  * minor changes to services authorizations. In particular, the simple term "rdf" is now only a shortcut for 
    rdf(_) and rdf(_,_) and should never be expressed as a capability. "rdf(code)" has been associated to all
    capabilities previously expressed as "rdf".
  * minor fixes to the labels identifying some locales
  
version 8.0
date: 29/07/2020
  * changed graph names and metadata namespace in the support repository in favor of more robust/readable ones
    (it applies only to newly created projects).
  * upgraded the metadata namespace of existing projects, if the current namespace contains two hashes
  * introduced support for SkosDiff (a separate component: https://bitbucket.org/art-uniroma2/skosdiff/ for 
    computing differences among SKOS thesauri)
  * added support for the configuration of the URL for the remote alignment service
  * added support in CustomForm for new Pearl annotations improving the description of forms in UI clients
  * added support for inference of the above PEARL annotations based on the shape of the PEARL file
  * introduced new API for the programmatic creation of STProperties
  * added support for on-the-fly generation of STProperties from JSON Schemas
  * changed the directory name for indexes supporting global search 
  * added support for configurable dataset catalog connectors
  * added a property on the resourceview telling how to interpret blank nodes (e.g. use an OWL axiom renderer)
  * added support for no-lexicon mode in OntoLex lexical entries view (i.e. if no lexicon has been selected,
    then all lexical entries are shown)
  * in Alignment, enabled the possibility for the user to modify the scenario suggested by MAPLE
  * introduced PMKI catalog connector
  * introduced new translation service based on global search
  * introduced a new event bus 